[metadata]
# replace with your username:
name = libnl3
version = 0.3.1
url = https://github.com/coolshou/libnl3
author = coolshou
author_email = coolshou2060@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: System :: Networking
    Topic :: System :: Operating System Kernels :: Linux
description =  Pure Python port of the Netlink protocol library suite
long_description = file: README.rst
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
